src/css/style.css
body {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}
html,
body {
    min-height: 100vh;
    color: #333;
}

html {
    opacity: 0;
    transition: all 1s;
}

strong {
    font-weight: bold;
}
small {
    font-size: 80%;
}

.wrapper {
    width: 700px;
    padding: 0 20px;
    margin: 0 auto;
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    flex-direction: column;
}


/** Components */
.time {
    font-size: 120px;
    font-weight: 500;
}

.btn {
    cursor: pointer;
    background: none;
    border: 0;
    font-size: 80%;
    padding: 2px 5px;
    border-radius: 3px;
    outline: none;
}
.btn:hover {
    text-decoration: underline;
}
.btn.active {
    color: #fff;
    background: #4F78E2;
}

.positive {
    color: #61CA00;
}
.negative {
    color: #FF4949;
}

.chart-container {
    position: relative;
    height: 200px;
    width: 100%;
    margin-bottom: 20px;
}

.message {
    text-align: center;
    position: absolute;
    transform: translate(-50%, -50%);
    top: 50%;
    left: 50%;
    width: 280px;
}

.install {
    position: absolute;
    right: 0;
    top: 50%;
    transform: translate(0, -10%);
    z-index: 5;
    width: 300px;
    display: flex;
    flex-direction: column;
}
.install__link {
    align-self: flex-end;
    width: 280px;
    color: inherit;
    background: rgba(255, 255, 255, 0.8);
    border-radius: 6px;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
    border: 1px solid #e8e8e8;
    box-shadow: 0 1px 2px 0 rgba(0,0,0,.05);
    display: flex;
    flex-flow: row;
    height: 60px;
    align-items: center;
    transition: .2s linear;
    font-size: 13px;
    line-height: 20px;
    text-decoration: none;
    transition: .3s;
    position: relative;
    right: 0;
}
.install__link svg path {
    transition: .3s;
}
.install__link:hover svg path {
    fill: #000;
}
.install__link:hover {
    width: 300px;
}
.install__icon {
    height: 60px;
    width: 60px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.install_side {
    height: 60px;
    width: 60px;
    display: flex;
    flex: 1;
    justify-content: center;
    flex-flow: column;
}
.install_title {
    color: #000;
    font-weight: 600;
}
.install__descr {
    display: block;
    max-width: 210px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}



/**
 * Tooltip Styles
 * {@link https://chrisbracco.com/a-simple-css-tooltip/}
 */

/* Base styles for the element that has a tooltip */
[data-tooltip],
.tooltip {
  position: relative;
}

/* Base styles for the entire tooltip */
[data-tooltip]:before,
[data-tooltip]:after,
.tooltip:before,
.tooltip:after {
  position: absolute;
  text-align: left;
  visibility: hidden;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
  opacity: 0;
  -webkit-transition:
      opacity 0.2s ease-in-out,
        visibility 0.2s ease-in-out,
        -webkit-transform 0.2s cubic-bezier(0.71, 1.7, 0.77, 1.24);
    -moz-transition:
        opacity 0.2s ease-in-out,
        visibility 0.2s ease-in-out,
        -moz-transform 0.2s cubic-bezier(0.71, 1.7, 0.77, 1.24);
    transition:
        opacity 0.2s ease-in-out,
        visibility 0.2s ease-in-out,
        transform 0.2s cubic-bezier(0.71, 1.7, 0.77, 1.24);
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform:    translate3d(0, 0, 0);
  transform:         translate3d(0, 0, 0);
  pointer-events: none;
}

/* Show the entire tooltip on hover and focus */
[data-tooltip]:hover:before,
[data-tooltip]:hover:after,
[data-tooltip]:focus:before,
[data-tooltip]:focus:after,
.tooltip:hover:before,
.tooltip:hover:after,
.tooltip:focus:before,
.tooltip:focus:after {
  visibility: visible;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
  opacity: 1;
}

/* Base styles for the tooltip's directional arrow */
.tooltip:before,
[data-tooltip]:before {
  z-index: 1001;
  border: 6px solid transparent;
  background: transparent;
  content: "";
}

/* Base styles for the tooltip's content area */
.tooltip:after,
[data-tooltip]:after {
  z-index: 1000;
  padding: 8px 12px;
  min-width: 120px;
  background-color: #000;
  background-color: rgba(79, 120, 226, 0.85);
  color: #fff;
  content: attr(data-tooltip);
  font-size: 12px;
  line-height: 1.2;
}

/* Directions */

/* Top (default) */
[data-tooltip]:before,
[data-tooltip]:after,
.tooltip:before,
.tooltip:after,
.tooltip-top:before,
.tooltip-top:after {
  bottom: 100%;
  left: 50%;
}

[data-tooltip]:before,
.tooltip:before,
.tooltip-top:before {
  margin-left: -6px;
  margin-bottom: -12px;
  border-top-color: #000;
  border-top-color: rgba(79, 120, 226, 0.85);
}

/* Horizontally align top/bottom tooltips */
[data-tooltip]:after,
.tooltip:after,
.tooltip-top:after {
  margin-left: -80px;
}

[data-tooltip]:hover:before,
[data-tooltip]:hover:after,
[data-tooltip]:focus:before,
[data-tooltip]:focus:after,
.tooltip:hover:before,
.tooltip:hover:after,
.tooltip:focus:before,
.tooltip:focus:after,
.tooltip-top:hover:before,
.tooltip-top:hover:after,
.tooltip-top:focus:before,
.tooltip-top:focus:after {
  -webkit-transform: translateY(-12px);
  -moz-transform:    translateY(-12px);
  transform:         translateY(-12px);
}

/* Left */
.tooltip-left:before,
.tooltip-left:after {
  right: 100%;
  bottom: 50%;
  left: auto;
}

.tooltip-left:before {
  margin-left: 0;
  margin-right: -12px;
  margin-bottom: 0;
  border-top-color: transparent;
  border-left-color: #000;
  border-left-color: rgba(79, 120, 226, 0.85);
}

.tooltip-left:hover:before,
.tooltip-left:hover:after,
.tooltip-left:focus:before,
.tooltip-left:focus:after {
  -webkit-transform: translateX(-12px);
  -moz-transform:    translateX(-12px);
  transform:         translateX(-12px);
}

/* Bottom */
.tooltip-bottom:before,
.tooltip-bottom:after {
  top: 100%;
  bottom: auto;
  left: 50%;
}

.tooltip-bottom:before {
  margin-top: -12px;
  margin-bottom: 0;
  border-top-color: transparent;
  border-bottom-color: #000;
  border-bottom-color: rgba(79, 120, 226, 0.85);
}

.tooltip-bottom:hover:before,
.tooltip-bottom:hover:after,
.tooltip-bottom:focus:before,
.tooltip-bottom:focus:after {
  -webkit-transform: translateY(12px);
  -moz-transform:    translateY(12px);
  transform:         translateY(12px);
}

/* Right */
.tooltip-right:before,
.tooltip-right:after {
  bottom: 50%;
  left: 100%;
}

.tooltip-right:before {
  margin-bottom: 0;
  margin-left: -12px;
  border-top-color: transparent;
  border-right-color: #000;
  border-right-color: rgba(79, 120, 226, 0.85);
}

.tooltip-right:hover:before,
.tooltip-right:hover:after,
.tooltip-right:focus:before,
.tooltip-right:focus:after {
  -webkit-transform: translateX(12px);
  -moz-transform:    translateX(12px);
  transform:         translateX(12px);
}

/* Move directional arrows down a bit for left/right tooltips */
.tooltip-left:before,
.tooltip-right:before {
  top: 3px;
}

/* Vertically center tooltip content for left/right tooltips */
.tooltip-left:after,
.tooltip-right:after {
  margin-left: 0;
  margin-bottom: -16px;
}


.footer a {
    color: inherit;
}

 /*!
  * Load Awesome v1.1.0 (http://github.danielcardoso.net/load-awesome/)
  * {@link http://github.danielcardoso.net/load-awesome/animations/ball-pulse-sync.html}
  */
.la-ball-pulse-sync,
.la-ball-pulse-sync > div {
    position: relative;
    -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
            box-sizing: border-box;
}
.la-ball-pulse-sync {
    position: absolute;
    top: 50%;
    left: 50%;
    margin-left: -29px;
    margin-top: -30px; /* magic number */
    transition: all 1s;
    opacity: 0;
}
.la-ball-pulse-sync {
    display: block;
    font-size: 0;
    color: #fff;
}
.la-ball-pulse-sync.la-dark {
    color: #333;
}
.la-ball-pulse-sync > div {
    display: inline-block;
    float: none;
    background-color: #fff;
    border: 3px solid #4F78E2;
}
.la-ball-pulse-sync {
    width: 58px;
    height: 18px;
}
.la-ball-pulse-sync > div {
    width: 13px;
    height: 13px;
    margin: 3px;
    border-radius: 100%;
    -webkit-animation: ball-pulse-sync .6s infinite ease-in-out;
       -moz-animation: ball-pulse-sync .6s infinite ease-in-out;
         -o-animation: ball-pulse-sync .6s infinite ease-in-out;
            animation: ball-pulse-sync .6s infinite ease-in-out;
}
.la-ball-pulse-sync > div:nth-child(1) {
    -webkit-animation-delay: -.14s;
       -moz-animation-delay: -.14s;
         -o-animation-delay: -.14s;
            animation-delay: -.14s;
}
.la-ball-pulse-sync > div:nth-child(2) {
    -webkit-animation-delay: -.07s;
       -moz-animation-delay: -.07s;
         -o-animation-delay: -.07s;
            animation-delay: -.07s;
}
.la-ball-pulse-sync > div:nth-child(3) {
    -webkit-animation-delay: 0s;
       -moz-animation-delay: 0s;
         -o-animation-delay: 0s;
            animation-delay: 0s;
}
.la-ball-pulse-sync.la-sm {
    width: 26px;
    height: 8px;
}
.la-ball-pulse-sync.la-sm > div {
    width: 4px;
    height: 4px;
    margin: 2px;
}
.la-ball-pulse-sync.la-2x {
    width: 108px;
    height: 36px;
}
.la-ball-pulse-sync.la-2x > div {
    width: 20px;
    height: 20px;
    margin: 8px;
}
.la-ball-pulse-sync.la-3x {
    width: 162px;
    height: 54px;
}
.la-ball-pulse-sync.la-3x > div {
    width: 30px;
    height: 30px;
    margin: 12px;
}
/*
 * Animation
 */
@-webkit-keyframes ball-pulse-sync {
    33% {
        -webkit-transform: translateY(100%);
                transform: translateY(100%);
    }
    66% {
        -webkit-transform: translateY(-100%);
                transform: translateY(-100%);
    }
    100% {
        -webkit-transform: translateY(0);
                transform: translateY(0);
    }
}
@-moz-keyframes ball-pulse-sync {
    33% {
        -moz-transform: translateY(100%);
             transform: translateY(100%);
    }
    66% {
        -moz-transform: translateY(-100%);
             transform: translateY(-100%);
    }
    100% {
        -moz-transform: translateY(0);
             transform: translateY(0);
    }
}
@-o-keyframes ball-pulse-sync {
    33% {
        -o-transform: translateY(100%);
           transform: translateY(100%);
    }
    66% {
        -o-transform: translateY(-100%);
           transform: translateY(-100%);
    }
    100% {
        -o-transform: translateY(0);
           transform: translateY(0);
    }
}
@keyframes ball-pulse-sync {
    33% {
        -webkit-transform: translateY(100%);
           -moz-transform: translateY(100%);
             -o-transform: translateY(100%);
                transform: translateY(100%);
    }
    66% {
        -webkit-transform: translateY(-100%);
           -moz-transform: translateY(-100%);
             -o-transform: translateY(-100%);
                transform: translateY(-100%);
    }
    100% {
        -webkit-transform: translateY(0);
           -moz-transform: translateY(0);
             -o-transform: translateY(0);
                transform: translateY(0);
    }
}


/* Utilities */
.text-center {
    text-align: center !important;
}

.fade-in {
    opacity: 1 !important;
}

.center-block {
    margin-left: auto !important;
    margin-right: auto !important;
}

.hidden {
    display: none !important;
}

.mb-- { margin-bottom: 5px; }
.mb- { margin-bottom: 10px; }
.mb { margin-bottom: 15px; }
.mb\+ { margin-bottom: 30px; }
.mb\+\+ { margin-bottom: 50px; }

.mt { margin-top: 15px; }
.mt\+ { margin-top: 30px; }
.mt\+\+ { margin-top: 50px; }

